<resources>
    <string name="app_name">ACTORS</string>
    <string name="first_activity_name">ACTORS</string>
    <string name="activity_lista_glumaca">ACTORS LIST</string>

    <string name="ocena">RATING:</string>
    <string name="biografija">BIOGRAPHY:</string>
    <string name="filmovi">MOVIES:</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <!-- drawer glumci -->
    <string name="drawer_home_glumci">Actors</string>
    <string name="drawer_home_glumci_long">Show All Actors</string>



    <!-- drawer settings -->
    <string name="drawer_settings">Settings</string>
    <string name="drawer_settings_long">Change App Settings</string>

    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically if Wi-fi is available</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sync_list">pref_sync_list</string>

    <string name="notification_title">Item ordered</string>
    <string name="notification_text">The selected item has been ordered and will be shipped during the day.</string>

    <string name="master_action_create">Create</string>
    <string name="detail_button_buy">Buy</string>
    <string name="detal_action_update">Update</string>
    <string name="detal_action_delete">Delete</string>




    <string name="activity_first_toolbar_title">Toolbar Title</string>

    <string name="activity_settings_name">Settings Activity</string>

    <string name="fragment_master_action_create">Create</string>


</resources>
