<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/pref_sync_list"
        android:title="Auto data sync">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sync"
            android:summary="@string/pref_sync_summ"
            android:title="@string/pref_sync_title" />

        <ListPreference
            android:defaultValue="1"
            android:dependency="@string/pref_sync"
            android:dialogTitle="@string/pref_syncConnectionType"
            android:entries="@array/pref_syncConnectionTypes_entries"
            android:entryValues="@array/pref_syncConnectionTypes_values"
            android:key="@string/pref_sync_list"
            android:summary="%s"
            android:title="@string/pref_syncConnectionType" />

    </PreferenceCategory>

</PreferenceScreen>